--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,6 @@
     "foundation": "~5.4.4",
     "requirejs": "~2.1.15",
     "underscore": "~1.7.0",
-    "angular-route": "~1.2.25"
+    "angular-route": "1.2.22"
   }
 }
