--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,9 @@
     "foundation": "~5.4.4",
     "requirejs": "~2.1.15",
     "underscore": "~1.7.0",
+    "angular": "1.2.22",
     "angular-route": "1.2.22",
-    "angularjs-geolocation": "~0.1.1"
+    "angularjs-geolocation": "~0.1.1",
+    "angular-mocks": "~1.3.0"
   }
 }
