--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
     "grunt-contrib-watch": "0.6.1",
     "grunt-contrib-coffee": "0.10.1",
   	"grunt-contrib-cssmin": "0.9.0",
-  	"grunt-contrib-copy": "0.6.0"
+  	"grunt-contrib-copy": "0.6.0",
+    "karma": "^0.12.0",
+    "karma-jasmine": "^0.2.1",
+    "karma-script-launcher": "^0.1.0",
+    "karma-chrome-launcher": "^0.1.2",
+    "karma-coffee-preprocessor": "^0.1.3"
   }
 }
